added bulma and a simple navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
+
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-end">
+    <div class="navbar-item">
+      <div class="buttons">
+        <% if current_user %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-link' %>
+        <% else %>
+          <%= link_to "Login", new_user_session_path, class: 'button is-link' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</nav>
+
     <%= yield %>
   </body>
 </html>
