--- a/app/views/hangouts/index.html.erb
+++ b/app/views/hangouts/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Hangouts#index</h1>
-<p>Find me in app/views/hangouts/index.html.erb</p>
+
+<h1>Welcome to the messanger</h1>
+<div>
+  <div id="message-display">
+  </div>
+  <div id="message-form">
+    <form action="" id="message-form">
+      <div class="field has-addons">
+        <div class="control">
+          <input class="input" id="message-input" type="text">
+        </div>
+        <div class="control">
+          <input type="submit" value="Send Message" class="button is-primary">
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
