--- a/app/assets/stylesheets/hangouts.scss
+++ b/app/assets/stylesheets/hangouts.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the hangouts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#message-display {
+    height: 80vh;
+    overflow: auto
+  }
+  
+  #message-input {
+    width: 60vw;
+  }
+  
+  
