added the craeet message

--- a/app/views/hangouts/index.html.erb
+++ b/app/views/hangouts/index.html.erb
@@ -1,17 +1,27 @@
 
 <div>
   <div id="message-display">
+  <% @messages.each do |message| %>
+  <article class="message">
+    <div class="message-header">
+      <%= message.user.email %>
+    </div>
+    <div class="message-body">
+      <%= message.body %>
+    </div>
+  </article>
+<% end %>
   </div>
   <div id="message-form">
-    <form action="" id="message-form">
+  <%= form_with model: @message do |f| %>
       <div class="field has-addons">
         <div class="control">
-          <input class="input" id="message-input" type="text">
+              <%= f.text_field :body, id: 'message-input', class: 'input' %>
         </div>
         <div class="control">
-          <input type="submit" value="Send Message" class="button is-primary">
+         <%= f.submit 'Send Message', class: 'button is-primary' %>
         </div>
       </div>
-    </form>
+      <% end %>
   </div>
 </div>
